--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     
     <div class="box">
         <p><b>Leave me a message in the</b></p>
-        <a href="mailto:developverse@gmail.com">developverse@gmail.com</a>
+        <a href="mailto:alshadabarnab@gmail.com">alshadabarnab@gmail.com</a>
 
        <div id="butt">
     
@@ -70,7 +70,7 @@
 </div>
 </section>
 <footer>
-    <p><b>Develop Verse Initiative. © 2022 All Rights Reserved.</b></p>
+    <p><b>Al Shadab Arnab Initiative. © 2022 All Rights Reserved.</b></p>
 </footer>
 </body>
 </html>
