button mail change

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
        <div id="butt">
     
-    <button onclick="document.location='mailto:developverse@gmail.com '">SEND MAIL</button>
+    <button onclick="document.location='mailto:alshadabarnab@gmail.com '">SEND MAIL</button>
 </div>
 </div>
 </section>
